style in config.json

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
   },
   "styles": {
     "external": {
-      "style": "https://example.com/style.json",
+      "style": "https://tiles1.squadrats.com/planet/1741854114/street.json",
       "tilejson": {
         "tiles": [
           "https://tiles1.squadrats.com/BuUeIIABwWVFnxLqRtU063kMlS02/trophies/1746950271414/{z}/{x}/{y}.pbf"
